--- a/src/AIS.ConsoleStarter/AIS.ConsoleStarter.csproj
+++ b/src/AIS.ConsoleStarter/AIS.ConsoleStarter.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FastMember" Version="1.5.0" />
     <PackageReference Include="System.IO.Abstractions" Version="11.0.7" />
   </ItemGroup>
 
